орректировка расположения названий постановок на занавесях
зменения на левой занавеси:
- : перенесена в ряд левее амлета (right: 160px), в середину по высоте (top: 50%)
- Ь: опущена ниже (top: 55%) чтобы не наезжала на Щелкунчик

зменения на правой занавеси:
- Т: опущен на 20% (top: 35%)
- СЯ : поднята на 30% (top: 25%)
- СТ : поднято на 20% (top: 35%)

езультат: лучшено распределение названий по занавесям без наложений

--- a/css/main.css
+++ b/css/main.css
@@ -378,18 +378,18 @@ h1, h2 {
 
 /* Расположение на левом занавесе - случайное расположение */
 .side-curtain.left .production-title:nth-child(1) { top: 15%; right: 40px; }  /* ЩЕЛКУНЧИК */
-.side-curtain.left .production-title:nth-child(2) { top: 45%; right: 40px; }  /* ЖИЗЕЛЬ - короткое, может быть в той же линии */
+.side-curtain.left .production-title:nth-child(2) { top: 55%; right: 40px; }  /* ЖИЗЕЛЬ - опущена ниже */
 .side-curtain.left .production-title:nth-child(3) { top: 70%; right: 80px; }  /* ЗОЛУШКА */
 .side-curtain.left .production-title:nth-child(4) { top: 25%; right: 120px; } /* ДОН КИХОТ */
-.side-curtain.left .production-title:nth-child(5) { top: 55%; right: 120px; } /* РАЙМОНДА */
+.side-curtain.left .production-title:nth-child(5) { top: 50%; right: 160px; } /* РАЙМОНДА - перенесена левее Гамлета, в середину по высоте */
 .side-curtain.left .production-title:nth-child(6) { top: 75%; right: 160px; } /* ГАМЛЕТ */
 
 /* Расположение на правом занавесе - случайное расположение */
-.side-curtain.right .production-title:nth-child(1) { top: 15%; left: 30px; }  /* МАКБЕТ */
+.side-curtain.right .production-title:nth-child(1) { top: 35%; left: 30px; }  /* МАКБЕТ - опущен на 20% */
 .side-curtain.right .production-title:nth-child(2) { top: 35%; left: 70px; }  /* ЭСМЕРАЛЬДА */
-.side-curtain.right .production-title:nth-child(3) { top: 55%; left: 110px; }  /* ОРЛЕАНСКАЯ ДЕВА */
+.side-curtain.right .production-title:nth-child(3) { top: 25%; left: 110px; }  /* ОРЛЕАНСКАЯ ДЕВА - поднята на 30% */
 .side-curtain.right .production-title:nth-child(4) { top: 25%; left: 150px; } /* АЛЬЦИНА */
-.side-curtain.right .production-title:nth-child(5) { top: 55%; left: 190px; } /* СОТВОРЕНИЕ МИРА */
+.side-curtain.right .production-title:nth-child(5) { top: 35%; left: 190px; } /* СОТВОРЕНИЕ МИРА - поднято на 20% */
 
 
 /* ====== МОБИЛЬНАЯ ГАЛЕРЕЯ ====== */
